# gid

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  build.rs
.github/workflows/: ci.yml  release.yml
docs/: index.html
src/: cli.rs  main.rs
src/audit/: mod.rs
src/commands/: add.rs  audit.rs  auto.rs  completions.rs  current.rs  doctor.rs  edit.rs  export.rs  fix_commit.rs  hook.rs  import.rs  list.rs  mod.rs  remove.rs  rule.rs  switch.rs
src/config/: identity.rs  mod.rs  project.rs  settings.rs
src/git/: mod.rs
src/gpg/: mod.rs
src/rules/: mod.rs
src/ssh/: mod.rs
tests/: scenario_audit.rs  scenario_fix_commit.rs  scenario_project_config.rs
tests/common/: mod.rs
