[package]
name = "gid"
version = "2.0.0"
edition = "2021"
authors = ["gid contributors"]
description = "Git Identity Manager - A complete solution for managing multiple Git identities"
license = "MIT"
repository = "https://github.com/ygwa/gid"
readme = "README.md"
keywords = ["git", "identity", "cli", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env", "string"] }
clap_complete = "4"

# Terminal UI
colored = "2"
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# File system
directories = "5"
glob = "0.3"
walkdir = "2"

# Git operations (vendored for cross-platform builds)
git2 = { version = "0.18", features = ["vendored-libgit2", "vendored-openssl"] }

# Regex for rule matching
regex = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Date/time
chrono = "0.4"

# Home directory
home = "0.5"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1

[[bin]]
name = "gid"
path = "src/main.rs"

